# yunetas

./: .config  .config.old  .gitignore  .gitmodules  .hgignore  .jshintrc  BASIC-USAGE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DIALOGS-with-Claude.md  INSTALL.md  Kconfig  Kconfig.compiler  Kconfig.yunetas  LICENSE  LICENSE.txt  Makefile  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_V2.md  PERFORMANCE_FINAL_FOCUSED.md  PERFORMANCE_NOVEL_FINDINGS.md  PERFORMANCE_SINGLE_THREAD_FOCUSED.md  README.md  README.rst  TODO-next-session.md  TODO.md  YUNETA_VERSION  compila-prod.sh  compila.sh  compile-c-musl.sh  compile-c-prod.sh  compile.sh  ctest-loop.sh  defconfig  install-dependencies.sh  install.sh  iouring3  plan.md  reset.sh  (+15 more)
c_prot/: CMakeLists.txt
c_prot/src/: c_ievent_cli.c  c_ievent_cli.h  c_ota.c  c_ota.h  c_prot_http_cli.c  c_prot_modbus_master.c  c_prot_tcp4.c  c_prot_tcp4.h  c_prot_tcp4h.c  msg_ievent.c  msg_ievent.h
core-esp32/: CMakeLists.txt
core-esp32/common_components/olimex-gateway/: Kconfig.ethernet  Kconfig.projbuild.ethernet
core-esp32/components/esp_c_prot/: CMakeLists.txt  Kconfig  Kconfig.protocols  src
core-esp32/components/esp_gc_prot/: CMakeLists.txt  src
core-esp32/components/esp_gobj/: CMakeLists.txt  src
core-esp32/components/esp_jansson/: CMakeLists.txt
core-esp32/components/esp_yuneta/: CMakeLists.txt  Kconfig  Kconfig.ethernet  Kconfig.uart
core-linux/: CMakeLists.txt
core-linux/src/: c_linux_transport.c  c_linux_transport.h  c_linux_uart.c  c_linux_yuno.c  c_linux_yuno.h  c_timer.c  c_timer.h  log_udp_handler.c  log_udp_handler.h  yuneta_environment.c  yuneta_environment.h  yuneta_ev_loop.c  yuneta_ev_loop.h  yunetas_environment.c  yunetas_ev_loop.c  yunetas_ev_loop.h
gobj/: CMakeLists.txt
gobj/src/: 00_http_parser.h  addr2line.c  ansi_escape_codes.h  backtrace_symbols.c  comm_prot.c  comm_prot.h  command_parser.c  command_parser.h  dirs.c  dirs.h  environment.h  gbuffer.c  gbuffer.h  ghttp_parser.c  ghttp_parser.h  glog.c  gobj.c  gobj.h  gobj_environment.c  helpers.c  helpers.h  istream.c  istream.h  kwid.c  kwid.h  log_udp_handler.c  log_udp_handler.h  msg_ievent.c  msg_ievent.h  parse_url.c  parse_url.h  stacktrace_with_bfd.c  stacktrace_with_bfd.h  stacktrace_with_bfdX.c  stats_parser.c  stats_parser.h  timeranger.c  timeranger.h
kernel/c/gobj-c/: CMakeLists.txt  README.md
kernel/c/libjwt/: .clang-tidy  CMakeLists.txt  README.md
kernel/c/root-esp32/: CMakeLists.txt  README.md
kernel/c/root-linux/: CMakeLists.txt  README.md
modules/c/: CMakeLists.txt  Kconfig  README.md
modules/c/c_console/: CMakeLists.txt  Kconfig  c_editline.c  c_editline.h  c_pty.c  c_pty.h  g_ev_console.c  g_ev_console.h  help_ncurses.c
modules/c/c_mqtt/: Kconfig  Kconfig.memory  Kconfig.shell
modules/c/c_postgres/: CMakeLists.txt  Kconfig  c_postgres.c  c_postgres.h
modules/c/c_prot/: CMakeLists.txt  Kconfig  README.md  README.rst
modules/c/c_test/: CMakeLists.txt  c_pepon.c  c_teston.c
modules/c/console/: CMakeLists.txt  Kconfig  README.md
modules/c/modbus/: CMakeLists.txt  Kconfig  README.md
modules/c/mqtt/: CMakeLists.txt  Kconfig  Kconfig.input  README.md
modules/c/postgres/: CMakeLists.txt  Kconfig  README.md
modules/c/test/: CMakeLists.txt  Kconfig  README.md
performance/: CMakeLists.txt  README.md  README.rst
performance/c/: CMakeLists.txt  README.md
performance/c/perf_auth_bff/: CMakeLists.txt  c_perf_auth_bff.c  c_perf_auth_bff.h  main_perf_auth_bff.c
performance/c/perf_c_tcp/: CMakeLists.txt  README.md  c_test4.c  c_test5.c  c_test5.h  main_test4.c  main_test5.c
performance/c/perf_c_tcps/: CMakeLists.txt  README.md  c_test4.c  c_test4.h  c_test5.c  c_test5.h  main_test4.c  main_test5.c
performance/c/perf_yev_ping_pong/: CMakeLists.txt  README.md
performance/c/perf_yev_ping_pong2/: CMakeLists.txt  README.md
performance/c/perf_yev_timer/: CMakeLists.txt
performance/c/test_yev_ping_pong/: CMakeLists.txt
performance/c/test_yev_timer/: CMakeLists.txt
performance/test_yev_ping_pong/: CMakeLists.txt
performance/test_yev_ping_pong/src/: test_yev_ping_pong.c
performance/test_yev_timer/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  README.rst  inotify_io_uring.c  inotify_io_uring_move.c  inotify_io_uring_recursive.c
tests/c/: CMakeLists.txt  README.md
tests/c/build_path/: CMakeLists.txt  test_build_path.c
tests/c/c_auth_bff/: CMakeLists.txt  README.md  c_mock_keycloak.c  c_mock_keycloak.h  c_test10_kc_silence.c  c_test10_kc_silence.h  c_test11_cancel_retry.c  c_test11_cancel_retry.h  c_test12_stale_reply.c  c_test12_stale_reply.h  c_test13_refresh_expired.c  c_test13_refresh_expired.h  c_test14_method_not_allowed.c  c_test14_method_not_allowed.h  c_test15_missing_body.c  c_test15_missing_body.h  c_test16_unknown_endpoint.c  c_test16_unknown_endpoint.h  c_test17_legacy_idp_url.c  c_test17_legacy_idp_url.h  c_test18_discovery_failure.c  c_test18_discovery_failure.h  c_test19_logout_no_cookie.c  c_test19_logout_no_cookie.h  c_test1_login.c  c_test1_login.h  (+37 more)
tests/gobj/: CMakeLists.txt
tests/test_gobj/: CMakeLists.txt  test_gobj.c
tests/test_yev_loop/: CMakeLists.txt
utils/c/: CMakeLists.txt  README.md
yunos/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test_esteriliz  test_frigo  test_sonda
yunos/c/: CMakeLists.txt  README.md
yunos/c_prot/: Makefile  cmake_install.cmake
yunos/controlcenter/: CMakeLists.txt
yunos/core-esp32/: Makefile  cmake_install.cmake
yunos/core-linux/: Makefile  cmake_install.cmake
yunos/dba_postgres/: CMakeLists.txt
yunos/emailsender/: CMakeLists.txt
yunos/emu_device/: CMakeLists.txt
yunos/gobj/: Makefile  cmake_install.cmake
yunos/gui_yuneta/: .jshintrc
yunos/gui_yuneta.js/: deploy_artgins_com.sh
yunos/js/: README-KEYCLOAK-LOGIN-FORM.md
yunos/logcenter/: CMakeLists.txt
yunos/sgateway/: CMakeLists.txt
yunos/watchfs/: CMakeLists.txt
yunos/yuno_agent/: CMakeLists.txt  deploy_agent.sh
yunos/yuno_agent22/: CMakeLists.txt
yunos/yuno_cli/: CMakeLists.txt
yunos/yunos/: Makefile  cmake_install.cmake
(+3779 files in other folders)
