##############################################
#   CMake
##############################################
cmake_minimum_required(VERSION 3.0)

##############################################
#   Source
##############################################
add_subdirectory(test_yev_ping_pong)
add_subdirectory(test_yev_timer)
