##############################################
#   CMake
##############################################
cmake_minimum_required(VERSION 3.5)

##############################################
#   Source
##############################################
add_subdirectory(perf_yev_ping_pong)
add_subdirectory(perf_yev_ping_pong2)
add_subdirectory(perf_c_tcp)
add_subdirectory(perf_c_tcps)
